infra/terraform/cluster/security.tf
resource "aws_security_group" "k3s_sg" {
  name        = "phoenix-k3s-sg"
  description = "Security group for K3s cluster"
  vpc_id      = aws_vpc.phoenix_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Kubernetes API"
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Internal communication"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self        = true
  }

ingress {
  description = "ArgoCD HTTPS"
  from_port   = 31456
  to_port     = 31456
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "phoenix-k3s-sg"
  }
}
